<resources>
    <string name="app_name">JokApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="buttonNewJoke">Nouvelle blague</string>
    <string name="buttonJokeAnswer">Réponse</string>
    <string name="buttonGenerateJoke">Générer blague</string>
    <string name="buttonFavorites">Favoris</string>
    <string name="apptTitle">JOKAPP</string>
    <string name="textViewCategory">By default :</string>
    <string name="chechBoxAny">Any</string>
    <string name="checkBoxProgramming">Programming</string>
    <string name="checkBoxMisc">Misc</string>
    <string name="checkBoxDark">Dark</string>
    <string name="checkBoxPun">Pun</string>
    <string name="chechBoxSpooky">Spooky</string>
    <string name="checkBoxChristmas">Christmas</string>
    <string name="textViewLanguages">Languages :</string>
    <string name="favoriteIcon">Favorite</string>
    <string name="filtersOptions">Filters</string>
    <string name="filterCategory">Category</string>
    <string name="filterLanguage">Language</string>
    <string name="filterBlacklist">Blacklist</string>
    <string name="filterType">Type</string>
    <string name="textNoFoundJoke">No joke were found wtih these filters</string>
    <string name="checkBoxNsfw">Nsfw</string>
    <string name="checkBoxReligious">Religious</string>
    <string name="checkBoxPolitical">Political</string>
    <string name="checkBoxRacist">Racist</string>
    <string name="checkBoxSexist">Sexist</string>
    <string name="checkBoxExplicit">Explicite</string>
    <string name="textViewCategory2">More specific</string>
    <string name="checkBoxSingleJoke">Single</string>
    <string name="checkBox2PartsJOke">Two parts</string>
    <string name="filterTypeJoke">Type of joke</string>
    <string name="deleteFavorite">Delete</string>
    <string name="contentDistributionImageButtonDelete">Delete</string>

    <string name="jokeDeleted">Joke successfully deleted</string>
    <string name="jokeDeletedProblem">Problem during the deletion of the joke</string>
    <string name="jokeAddedFavorite">Joke successfully added to favorites</string>
    <string name="jokeAddedFavoriteProblem">No current joke</string>
    <string name="jokeGenerationProblem">Problem, verify the criteria</string>
</resources>