<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterCategory"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="@dimen/titleFilter"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCategory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxAny"
            android:text="@string/chechBoxAny"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewCategory2"
        android:layout_gravity="center"
        android:textSize="20sp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/checkboxProgramming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxProgramming"/>

        <CheckBox
            android:id="@+id/checkboxMisc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxMisc"/>

        <CheckBox
            android:id="@+id/checkboxDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxDark"/>

        <CheckBox
            android:id="@+id/checkboxPun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxPun"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/checkboxSpooky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chechBoxSpooky"/>

        <CheckBox
            android:id="@+id/checkboxChristmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxChristmas"/>

    </LinearLayout>

</LinearLayout>