<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewCategory"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxAny"
            android:text="@string/chechBoxAny"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/checkboxProgramming"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxProgramming"/>

        <CheckBox
            android:id="@+id/checkboxMisc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxMisc"/>

        <CheckBox
            android:id="@+id/checkboxDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxDark"/>

        <CheckBox
            android:id="@+id/checkboxPun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxPun"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/checkboxSpooky"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chechBoxSpooky"/>

        <CheckBox
            android:id="@+id/checkboxChristmas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxChristmas"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewLanguages"
            android:layout_marginEnd="5dp"/>
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerLanguages"
            />
    </LinearLayout>


</LinearLayout>