<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterBlacklist"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="@dimen/titleFilter"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        >

        <CheckBox
            android:id="@+id/checkboxNsfw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxNsfw"/>

        <CheckBox
            android:id="@+id/checkboxReligious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxReligious"/>

        <CheckBox
            android:id="@+id/checkboxPolitical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxPolitical"/>

        <CheckBox
            android:id="@+id/checkboxRacist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxRacist"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <CheckBox
            android:id="@+id/checkboxSexist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSexist"/>

        <CheckBox
            android:id="@+id/checkboxExplicit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxExplicit"/>

    </LinearLayout>
</LinearLayout>