<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filterTypeJoke"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:textSize="@dimen/titleFilter"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <CheckBox
            android:id="@+id/checkBoxSingleJoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxSingleJoke"
            android:layout_margin="15dp"/>

        <CheckBox
            android:id="@+id/checkBox2PartsJoke"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/checkBox2PartsJOke" />

    </LinearLayout>


</LinearLayout>