<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/apptTitle"
        android:layout_weight="1"
        android:textAlignment="center"

        />

    <LinearLayout
        android:id="@+id/appMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/buttonGenerateJoke"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonGenerateJoke"/>

        <Button
            android:id="@+id/buttonShowFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFavorites"/>

    </LinearLayout>
</LinearLayout>